# Ball_On_Plate_3D_Visual__1.0.0

./: CMakeLists.txt  README.md  main.cpp
Textures/Design/Arduino/: arduino.3ds
Textures/Design/BreadBoard/: BreadBoard.3ds
Textures/Design/MainCarrier/: MainCarrier.3ds
Textures/Design/MainCarrierBottom/: MainCarrierBottom.3ds  MainCarrierBottomm.3ds
Textures/Design/MotorY/: MotorY.3ds
include/: Ball.h  BallOnPlate3DVisual.h  BallOnPlateEventReceiver.h  BottomPlate.h  Carrier.h  Equilibrium.h  Mouse.h  Plate.h  Plotting.h  SerialCommunication.h  SerialCommunicationLinux.h  SerialCommunicationWindows.h  UnderOfBottomPlate.h  rs232.h
src/: Ball.cpp  BallOnPlate3DVisual.cpp  BallOnPlateEventReceiver.cpp  BottomPlate.cpp  Carrier.cpp  Equilibrium.cpp  Mouse.cpp  Plate.cpp  Plotting.cpp  SerialCommunication.cpp  SerialCommunicationLinux.cpp  SerialCommunicationWindows.cpp  UnderOfBottomPlate.cpp  rs232.cpp
